[metadata]
name = tree 
version = 0.1
author = mclds
author_email = mclds@protonmail.com
description = File tree visualizer, taken from the Rich documentation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://notabug.org/micaldas/tree
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[flake8]
extend-ignore = E501
max-line-length = 180
verbose = 2
show-source = True


