[metadata]
name = tree 
version = 0.2
author = mclds
author_email = mclds@protonmail.com
description = File tree visualizer, taken from the Rich documentation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://notabug.org/micaldas/tree
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[flake8]
extend-ignore = F401 F841 W605 E704, E722, E1, W1, E2, W2, E3, W3, E4, W4, E5, W5, E731
max-line-length = 180
verbose = 2
show-source = True

[options.entry_points]
console_scripts = 
    ntree = tree.ntree:walk_directory
